--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1 {
 
 h2 {
   font-family: 'Indie Flower', cursive;
-  color: #6a197d;
+  color: #726a95;
   font-size: 3rem;
 }
 
@@ -38,7 +38,9 @@ hr {
   border-top-style: dotted;
   border-color: #0b0b0d;
   border-width: 10px;
-  width: 20%;
+  width: 5%;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .top-container {
@@ -99,6 +101,7 @@ hr {
 .globe {
   height: 350px;
   width: 350px;
+  margin-bottom: 100px;
 }
 
 .credits {
@@ -123,4 +126,8 @@ hr {
 
 .watermark {
   margin-top: 0;
+}
+
+.in-touch {
+  color: #d3d5fd;
 }
